<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cascoETubosLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/detalhesCascoETubosTextView"
        style="@style/TextoGrangeTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="@string/detalhes_casco_e_tubos"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/listDivider" />


    <TextView
        android:id="@+id/layoutCascoETubosTextView"
        style="@style/TextoGrangeTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="@string/layout"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:background="?android:attr/listDivider" />


    <RadioGroup
        android:id="@+id/tipoDeLayoutCascoETubos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/squareLayoutRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/square_layout_90" />

        <RadioButton
            android:id="@+id/triangularLayoutRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangular_layout_60" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>